--- a/buf.yaml
+++ b/buf.yaml
@@ -12,6 +12,7 @@ lint:
     DIRECTORY_SAME_PACKAGE:
       - examples/internal/proto/examplepb/a_bit_of_everything.proto
       - examples/internal/proto/examplepb/echo_service.proto
+      - examples/internal/proto/examplepb/enum_with_single_value.proto
       - examples/internal/proto/examplepb/flow_combination.proto
       - examples/internal/proto/examplepb/generate_unbound_methods.proto
       - examples/internal/proto/examplepb/generated_input.proto
@@ -50,6 +51,7 @@ lint:
       - examples/internal/helloworld/helloworld.proto
       - examples/internal/proto/examplepb/a_bit_of_everything.proto
       - examples/internal/proto/examplepb/echo_service.proto
+      - examples/internal/proto/examplepb/enum_with_single_value.proto
       - examples/internal/proto/examplepb/flow_combination.proto
       - examples/internal/proto/examplepb/generate_unbound_methods.proto
       - examples/internal/proto/examplepb/generated_input.proto
@@ -79,6 +81,7 @@ lint:
     PACKAGE_SAME_GO_PACKAGE:
       - examples/internal/proto/examplepb/a_bit_of_everything.proto
       - examples/internal/proto/examplepb/echo_service.proto
+      - examples/internal/proto/examplepb/enum_with_single_value.proto
       - examples/internal/proto/examplepb/flow_combination.proto
       - examples/internal/proto/examplepb/generate_unbound_methods.proto
       - examples/internal/proto/examplepb/generated_input.proto
@@ -99,6 +102,7 @@ lint:
       - examples/internal/helloworld/helloworld.proto
       - examples/internal/proto/examplepb/a_bit_of_everything.proto
       - examples/internal/proto/examplepb/echo_service.proto
+      - examples/internal/proto/examplepb/enum_with_single_value.proto
       - examples/internal/proto/examplepb/flow_combination.proto
       - examples/internal/proto/examplepb/generate_unbound_methods.proto
       - examples/internal/proto/examplepb/generated_input.proto
