--- a/examples/internal/proto/examplepb/BUILD.bazel
+++ b/examples/internal/proto/examplepb/BUILD.bazel
@@ -11,8 +11,8 @@ package(default_visibility = ["//visibility:public"])
 # gazelle:exclude a_bit_of_everything_grpc.pb.go
 # gazelle:exclude echo_service.pb.gw.go
 # gazelle:exclude echo_service_grpc.pb.go
-# gazelle:exclude enum_with_single_value.pb.pb.gw.go
-# gazelle:exclude enum_with_single_value.pb.pb.go
+# gazelle:exclude enum_with_single_value.pb.gw.go
+# gazelle:exclude enum_with_single_value.pb.go
 # gazelle:exclude flow_combination.pb.gw.go
 # gazelle:exclude flow_combination_grpc.pb.go
 # gazelle:exclude generate_unbound_methods.pb.gw.go
