--- a/examples/internal/proto/examplepb/enum_with_single_value.buf.gen.yaml
+++ b/examples/internal/proto/examplepb/enum_with_single_value.buf.gen.yaml
@@ -1,6 +1,6 @@
-version: v1
+version: v2
 plugins:
-  - name: openapiv2
+  - local: protoc-gen-openapiv2
     out: .
     opt:
       - omit_enum_default_value=true
