--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -11,7 +11,7 @@ bazel_dep(name = "rules_proto", version = "6.0.2")
 bazel_dep(name = "rules_go", version = "0.50.1", repo_name = "io_bazel_rules_go")
 bazel_dep(name = "gazelle", version = "0.39.1", repo_name = "bazel_gazelle")
 bazel_dep(name = "bazel_skylib", version = "1.7.1")
-bazel_dep(name = "protobuf", version = "26.0.bcr.2", repo_name = "com_google_protobuf")
+bazel_dep(name = "protobuf", version = "28.0-rc1", repo_name = "com_google_protobuf")
 bazel_dep(name = "googleapis", version = "0.0.0-20240819-fe8ba054a")
 
 go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")
@@ -19,6 +19,9 @@ go_sdk.download(version = "1.22.7")
 
 go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
 go_deps.from_file(go_mod = ":go.mod")
+
+# These dependencies are required by `.proto` files but are not captured in `go.mod`,
+# so they have to explicitly be made known to Gazelle.
 go_deps.module(
     path = "google.golang.org/grpc/cmd/protoc-gen-go-grpc",
     sum = "h1:rNBFJjBCOgVr9pWD7rs/knKL4FRTKgpZmsRfV214zcA=",
@@ -32,8 +35,8 @@ go_deps.module(
 use_repo(
     go_deps,
     "com_github_antihax_optional",
-    "com_github_google_go_cmp",
     "com_github_golang_protobuf",
+    "com_github_google_go_cmp",
     "com_github_rogpeppe_fastuuid",
     "in_gopkg_yaml_v3",
     "org_golang_google_genproto_googleapis_api",
@@ -44,6 +47,3 @@ use_repo(
     "org_golang_x_oauth2",
     "org_golang_x_text",
 )
-
-non_module_deps = use_extension(":non_module_deps.bzl", "non_module_deps")
-use_repo(non_module_deps, "com_github_bazelbuild_buildtools")
