--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -44,6 +44,11 @@ go_deps.module(
     sum = "h1:BRlRwQ/4rd608QvjsM9HSzBLLM1nXyzHaDzdkBAyDKk=",
     version = "v7.3.1",
 )
+go_deps.module(
+    path = "golang.org/x/tools",
+    sum = "h1:vU5i/LfpvrRCpgM/VPfJLg5KjxD3E+hfT1SH+d9zLwg=",
+    version = "v0.21.1-0.20240508182429-e35e4ccd0d2d",
+)
 use_repo(
     go_deps,
     "com_github_antihax_optional",
@@ -59,11 +64,11 @@ use_repo(
     "org_golang_google_protobuf",
     "org_golang_x_oauth2",
     "org_golang_x_text",
+    "org_golang_x_tools",
 )
 
 non_module_deps = use_extension(":non_module_deps.bzl", "non_module_deps")
 use_repo(
     non_module_deps,
     "com_github_bazelbuild_buildtools",
-    "org_golang_x_tools",
 )
