--- a/examples/internal/proto/examplepb/BUILD.bazel
+++ b/examples/internal/proto/examplepb/BUILD.bazel
@@ -18,6 +18,8 @@ package(default_visibility = ["//visibility:public"])
 # gazelle:exclude generate_unbound_methods.pb.gw.go
 # gazelle:exclude generate_unbound_methods_grpc.pb.go
 # gazelle:exclude generated_input.proto
+# gazelle:exclude no_body_post.pb.gw.go
+# gazelle:exclude no_body_post_grpc.pb.go
 # gazelle:exclude non_standard_names.pb.gw.go
 # gazelle:exclude non_standard_names_grpc.pb.go
 # gazelle:exclude response_body_service.pb.gw.go
@@ -56,6 +58,7 @@ proto_library(
         "generate_unbound_methods.proto",
         "generated_output.proto",
         "ignore_comment.proto",
+        "no_body_post.proto",
         "non_standard_names.proto",
         "remove_internal_comment.proto",
         "response_body_service.proto",
