Add the source archive to the release assets

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -27,4 +27,7 @@ builds:
 archives:
   - name_template: '{{ .Binary }}-{{ .Tag }}-{{ .Os }}-{{if eq .Arch "amd64"}}x86_64{{else}}{{ .Arch }}{{end}}'
     format: binary
+source:
+  enabled: true
+  name_template: '{{ .ProjectName }}-{{ .Tag }}'
 dist: _output
