Add a configuration to keep the bezel version up to date

--- a/renovate.json
+++ b/renovate.json
@@ -9,6 +9,18 @@
     "postUpdateOptions": [
         "gomodTidy"
     ],
+    "customManagers": [
+        {
+            "customType": "regex",
+            "fileMatch": [".bcr/presubmit.yml"],
+            "matchStrings": [
+                "bazel:\\s*\\[(?<currentValue>[0-9.x,\\s]+)\\]"
+            ],
+            "depNameTemplate": "Bazel",
+            "datasourceTemplate": "bazel",
+            "versioningTemplate": "regex:^\\d+\\.x$"
+        }
+    ],
     "packageRules": [
         {
             "updateTypes": [
