--- a/examples/internal/clients/responsebody/BUILD.bazel
+++ b/examples/internal/clients/responsebody/BUILD.bazel
@@ -11,6 +11,7 @@ go_library(
         "model_examplepb_repeated_response_strings.go",
         "model_examplepb_response_body_out.go",
         "model_examplepb_response_body_out_response.go",
+        "model_examplepb_response_body_value.go",
         "model_protobuf_any.go",
         "model_response_response_type.go",
         "model_rpc_status.go",
