--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -54,6 +54,7 @@ use_repo(
     go_deps,
     "com_github_antihax_optional",
     "com_github_bazelbuild_buildtools_v7",
+    "com_github_getkin_kin_openapi",
     "com_github_golang_protobuf",
     "com_github_google_go_cmp",
     "com_github_rogpeppe_fastuuid",
