--- a/.bcr/presubmit.yml
+++ b/.bcr/presubmit.yml
@@ -1,7 +1,7 @@
 bcr_test_module:
   module_path: "MODULE.bazel"
   matrix:
-    platform: ["debian10", "macos", "ubuntu2004", "windows"]
+    platform: ["debian11", "macos", "macos_arm64", "ubuntu2404", "windows"]
     bazel: [6.x, 7.x, 8.x]
   tasks:
     run_tests:
