Enable automerge for bazel-contrib/publish-to-bcr to keep the reusable workflow up to date

--- a/renovate.json
+++ b/renovate.json
@@ -56,6 +56,15 @@
                 "slsa-framework/slsa-github-generator"
             ],
             "pinDigests": false
+        },
+        {
+            "matchManagers": [
+                "github-actions"
+            ],
+            "matchPackageNames": [
+                "bazel-contrib/publish-to-bcr"
+            ],
+            "automerge": true
         }
     ]
 }
