add response for standalone echo service to utilize fix

--- a/examples/internal/proto/examplepb/unannotated_echo_service.yaml
+++ b/examples/internal/proto/examplepb/unannotated_echo_service.yaml
@@ -12,4 +12,7 @@ http:
     body: "*"
   - selector: grpc.gateway.examples.internal.proto.examplepb.UnannotatedEchoService.EchoDelete
     delete: "/v1/example/echo_delete"
-
+  - selector: grpc.gateway.examples.internal.proto.examplepb.UnannotatedEchoService.EchoNested
+    put: "/v1/example/echo_nested"
+    body: "*"
+    response_body: "n_id"
