--- a/examples/internal/proto/examplepb/standalone_echo_service.yaml
+++ b/examples/internal/proto/examplepb/standalone_echo_service.yaml
@@ -15,3 +15,7 @@ http:
       body: "*"
     - selector: grpc.gateway.examples.internal.proto.examplepb.UnannotatedEchoService.EchoDelete
       delete: "/v2/example/echo_delete"
+    - selector: grpc.gateway.examples.internal.proto.examplepb.UnannotatedEchoService.EchoNested
+      put: "/v1/example/echo_nested"
+      body: "*"
+      response_body: "n_id"
