fix: add linter ignores where needed

--- a/buf.yaml
+++ b/buf.yaml
@@ -18,6 +18,7 @@ lint:
       - examples/internal/proto/examplepb/generated_input.proto
       - examples/internal/proto/examplepb/excess_body.proto
       - examples/internal/proto/examplepb/non_standard_names.proto
+      - examples/internal/proto/examplepb/opaque.proto
       - examples/internal/proto/examplepb/openapi_merge_a.proto
       - examples/internal/proto/examplepb/openapi_merge_b.proto
       - examples/internal/proto/examplepb/response_body_service.proto
@@ -58,6 +59,7 @@ lint:
       - examples/internal/proto/examplepb/generated_input.proto
       - examples/internal/proto/examplepb/excess_body.proto
       - examples/internal/proto/examplepb/non_standard_names.proto
+      - examples/internal/proto/examplepb/opaque.proto
       - examples/internal/proto/examplepb/openapi_merge_a.proto
       - examples/internal/proto/examplepb/openapi_merge_b.proto
       - examples/internal/proto/examplepb/response_body_service.proto
@@ -89,6 +91,7 @@ lint:
       - examples/internal/proto/examplepb/generated_input.proto
       - examples/internal/proto/examplepb/excess_body.proto
       - examples/internal/proto/examplepb/non_standard_names.proto
+      - examples/internal/proto/examplepb/opaque.proto
       - examples/internal/proto/examplepb/response_body_service.proto
       - examples/internal/proto/examplepb/stream.proto
       - examples/internal/proto/examplepb/unannotated_echo_service.proto
@@ -111,6 +114,7 @@ lint:
       - examples/internal/proto/examplepb/generated_input.proto
       - examples/internal/proto/examplepb/excess_body.proto
       - examples/internal/proto/examplepb/non_standard_names.proto
+      - examples/internal/proto/examplepb/opaque.proto
       - examples/internal/proto/examplepb/openapi_merge_a.proto
       - examples/internal/proto/examplepb/openapi_merge_b.proto
       - examples/internal/proto/examplepb/response_body_service.proto
