--- a/examples/internal/proto/examplepb/BUILD.bazel
+++ b/examples/internal/proto/examplepb/BUILD.bazel
@@ -37,6 +37,8 @@ package(default_visibility = ["//visibility:public"])
 # gazelle:exclude unannotated_echo_service_grpc.pb.go
 # gazelle:exclude visibility_rule_echo_service.pb.gw.go
 # gazelle:exclude visibility_rule_echo_service_grpc.pb.go
+# gazelle:exclude opaque.pb.gw.go
+# gazelle:exclude opaque_grpc.pb.go
 # gazelle:exclude openapi_merge_a.proto
 # gazelle:exclude openapi_merge_b.proto
 # gazelle:go_grpc_compilers //:go_apiv2, //:go_grpc, //protoc-gen-grpc-gateway:go_gen_grpc_gateway
@@ -130,7 +132,6 @@ go_proto_library(
 go_library(
     name = "examplepb",
     srcs = [
-        "opaque.pb.gw.go",
         "openapi_merge_a.pb.go",
         "openapi_merge_a.pb.gw.go",
         "openapi_merge_a_grpc.pb.go",
