--- a/protoc-gen-openapiv3/BUILD.bazel
+++ b/protoc-gen-openapiv3/BUILD.bazel
@@ -6,7 +6,15 @@ go_library(
     name = "protoc-gen-openapiv3_lib",
     srcs = ["main.go"],
     importpath = "github.com/grpc-ecosystem/grpc-gateway/v2/protoc-gen-openapiv3",
-    deps = ["//utilities"],
+    deps = [
+        "//internal/codegenerator",
+        "//internal/descriptor",
+        "//protoc-gen-openapiv3/internal/genopenapiv3",
+        "//utilities",
+        "@org_golang_google_grpc//grpclog",
+        "@org_golang_google_protobuf//proto",
+        "@org_golang_google_protobuf//types/pluginpb",
+    ],
 )
 
 go_binary(
