--- a/internal/descriptor/BUILD.bazel
+++ b/internal/descriptor/BUILD.bazel
@@ -17,8 +17,10 @@ go_library(
         "//internal/codegenerator",
         "//internal/descriptor/apiconfig",
         "//internal/descriptor/openapiconfig",
+        "//internal/descriptor/openapiconfigv3",
         "//internal/httprule",
         "//protoc-gen-openapiv2/options",
+        "//protoc-gen-openapiv3/options",
         "@in_yaml_go_yaml_v3//:yaml",
         "@org_golang_google_genproto_googleapis_api//annotations",
         "@org_golang_google_grpc//grpclog",
