--- a/examples/internal/browser/package.json
+++ b/examples/internal/browser/package.json
@@ -1,29 +1,15 @@
 {
   "name": "grpc-gateway-example",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "Example use of gRPC-Gateway from browser",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "SEE LICENSE",
+  "packageManager": "pnpm@10.26.1",
   "devDependencies": {
-    "bower": "^1.7.9",
-    "bower-config": "^0.6.2",
-    "bower-logger": "^0.2.2",
-    "configstore": "^4.0.0",
-    "gulp": "^3.9.1",
-    "gulp-bower": "0.0.13",
-    "gulp-exit": "0.0.2",
-    "gulp-jasmine-browser": "^1.3.2",
-    "gulp-shell": "^0.5.2",
-    "jasmine": "^2.4.1",
-    "mout": "^1.2.4",
-    "phantomjs": "^2.1.7",
-    "swagger-client": "^2.1.28",
-    "webpack-stream": "^3.2.0"
-  },
-  "dependencies": {
-    "gulp-cli": "^2.3.0"
+    "gulp": "^5.0.1",
+    "h3": "2.0.1-rc.6"
   }
 }
