Update BUILD.bazel files and remove stale generated client files

--- a/examples/internal/clients/echo/BUILD.bazel
+++ b/examples/internal/clients/echo/BUILD.bazel
@@ -13,9 +13,13 @@ go_library(
         "model_examplepb_embedded.go",
         "model_examplepb_nested_message.go",
         "model_examplepb_simple_message.go",
+        "model_examplepb_status_check_request.go",
+        "model_examplepb_status_check_response.go",
+        "model_google_rpc_status.go",
+        "model_proto_sub2_status.go",
+        "model_proto_sub_status.go",
         "model_protobuf_any.go",
         "model_protobuf_null_value.go",
-        "model_rpc_status.go",
         "response.go",
     ],
     importpath = "github.com/grpc-ecosystem/grpc-gateway/v2/examples/internal/clients/echo",
