--- a/examples/internal/clients/abe/BUILD.bazel
+++ b/examples/internal/clients/abe/BUILD.bazel
@@ -37,20 +37,19 @@ go_library(
         "model_examplepb_check_status_response.go",
         "model_examplepb_error_object.go",
         "model_examplepb_error_response.go",
-        "model_examplepb_foo.go",
         "model_examplepb_numeric_enum.go",
         "model_examplepb_required_message_type_request.go",
+        "model_examplepb_snake_case_0_enum.go",
+        "model_examplepb_snake_case_enum.go",
         "model_examplepb_snake_enum_response.go",
-        "model_examplepbsnake_case_0_enum.go",
-        "model_examplepbsnake_case_enum.go",
+        "model_google_rpc_status.go",
         "model_message_path_enum_nested_path_enum.go",
         "model_nested_deep_enum.go",
         "model_oneofenum_example_enum.go",
         "model_pathenum_path_enum.go",
-        "model_pathenumsnake_case_for_import.go",
+        "model_pathenum_snake_case_for_import.go",
+        "model_proto_examplepb_foo.go",
         "model_protobuf_any.go",
-        "model_protoexamplepb_foo.go",
-        "model_rpc_status.go",
         "model_sub_string_message.go",
         "model_the_book_to_update_.go",
         "model_the_book_to_update__1.go",
