--- a/examples/internal/clients/responsebody/BUILD.bazel
+++ b/examples/internal/clients/responsebody/BUILD.bazel
@@ -12,9 +12,9 @@ go_library(
         "model_examplepb_response_body_out.go",
         "model_examplepb_response_body_out_response.go",
         "model_examplepb_response_body_value.go",
+        "model_google_rpc_status.go",
         "model_protobuf_any.go",
         "model_response_response_type.go",
-        "model_rpc_status.go",
         "model_stream_result_of_examplepb_response_body_out.go",
         "response.go",
     ],
