fix: bazel tests

--- a/examples/internal/proto/examplepb/BUILD.bazel
+++ b/examples/internal/proto/examplepb/BUILD.bazel
@@ -104,6 +104,7 @@ proto_library(
         "@com_google_protobuf//:timestamp_proto",
         "@com_google_protobuf//:wrappers_proto",
         "@googleapis//google/api:annotations_proto",
+        "@googleapis//google/api:client_proto",
     ],
 )
 
