feat(generator): harden opaque imports and casing
[WHY] Opaque handlers were missing imports for nested body types and
snake_case messages/enums produced invalid Go identifiers, causing
broken builds when `--use_opaque_api` was enabled.

[WHAT] Camel-case message/enum GoType helpers, register body-field
packages during generation, and add example protos under
`examples/internal/proto/examplepb` (opaque import + snake-case
service/RPC names) and `examples/internal/proto/sub` (snake-case type) so
`go test ./...` guards the regressions without extra generator-only
tests.

[HOW] Relocated the opaque example, regenerated it against the opaque
API, extended the gateway generator to track external body packages, and
leaned on the compiled examples instead of bespoke generator tests.

[TEST] go test ./...
[RISK] Low; scoped to generators/examples.

Fixes #6276, #6277

--- a/examples/internal/proto/examplepb/BUILD.bazel
+++ b/examples/internal/proto/examplepb/BUILD.bazel
@@ -56,6 +56,8 @@ proto_library(
     name = "examplepb_proto",
     srcs = [
         "a_bit_of_everything.proto",
+        "camel_case_message.proto",
+        "camel_case_service.proto",
         "echo_service.proto",
         "enum_with_single_value.proto",
         "excess_body.proto",
@@ -64,6 +66,7 @@ proto_library(
         "generated_output.proto",
         "ignore_comment.proto",
         "non_standard_names.proto",
+        "opaque_body_import.proto",
         "remove_internal_comment.proto",
         "response_body_service.proto",
         "stream.proto",
