Revert "feat(generator): harden opaque imports and fix snake case to go casin…"
This reverts commit 0018186ca556a511a1a7ea21cb7cd664fb44c0e8.

--- a/examples/internal/proto/sub/BUILD.bazel
+++ b/examples/internal/proto/sub/BUILD.bazel
@@ -6,10 +6,7 @@ package(default_visibility = ["//visibility:public"])
 
 proto_library(
     name = "sub_proto",
-    srcs = [
-        "camel_case_message.proto",
-        "message.proto",
-    ],
+    srcs = ["message.proto"],
 )
 
 go_proto_library(
